# SimpleJsoner

./: LICENSE  README.md  pyproject.toml
src/simplejsoner/: __init__.py  core.py
