[project]
name = "simplejsoner"
version = "0.1.0"
description = ""
authors = [
    {name = "qxuwll", email = "ivanskarupo23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "simplejsoner", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
